@@ -36,12 +36,14 @@ import com.alipay.application.share.vo.ApiResponse;
 import com.alipay.application.share.vo.ListVO;
 import com.alipay.application.share.vo.rule.RuleScanResultVO;
 import com.alipay.application.share.vo.rule.RuleVO;
+import com.alipay.application.share.vo.whited.GroupByRuleCodeVO;
 import com.alipay.application.share.vo.whited.WhitedConfigVO;
 import com.alipay.application.share.vo.whited.WhitedRuleConfigVO;
 import com.alipay.common.enums.WhitedRuleOperatorEnum;
 import com.alipay.common.enums.WhitedRuleTypeEnum;
 import com.alipay.dao.context.UserInfoContext;
 import com.alipay.dao.context.UserInfoDTO;
+import com.alipay.dao.dto.GroupByRuleCodeDTO;
 import com.alipay.dao.dto.QueryScanResultDTO;
 import com.alipay.dao.dto.QueryWhitedRuleDTO;
 import com.alipay.dao.dto.RuleScanResultDTO;
@@ -54,15 +56,13 @@ import com.alipay.dao.po.RuleScanResultPO;
 import com.alipay.dao.po.WhitedRuleConfigPO;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
-import org.springframework.util.StringUtils;
 
-import java.lang.reflect.Field;
 import java.util.*;
 import java.util.concurrent.*;
-import java.util.stream.Collectors;
 
 /**
  * Date: 2025/3/13
@@ -108,7 +108,7 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
 
 
     @Override
-    public int save(SaveWhitedRuleRequestDTO dto) throws RuntimeException {
+    public Long save(SaveWhitedRuleRequest dto) throws RuntimeException {
         UserInfoDTO currentUser = UserInfoContext.getCurrentUser();
         paramCheck(dto, currentUser);
         WhitedRuleConfigPO whitedRuleConfigPO = new WhitedRuleConfigPO();
@@ -139,22 +139,24 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
                 //更新数据
                 buildWhitedRuleConfigPO(whitedRuleConfigPO, dto, currentUser, ruleConfigJson);
                 whitedRuleConfigPO.setGmtModified(new Date());
-                return whitedRuleConfigMapper.updateByPrimaryKeySelective(whitedRuleConfigPO);
+                whitedRuleConfigMapper.updateByPrimaryKeySelective(whitedRuleConfigPO);
+                return whitedRuleConfigPO.getId();
             } else {
                 throw new RuntimeException("whitedRuleConfigPO id: " + dto.getId() + "不存在,请检查!");
             }
         }
+
         buildWhitedRuleConfigPO(whitedRuleConfigPO, dto, currentUser, ruleConfigJson);
-        whitedRuleConfigPO.setEnable(dto.getEnable());
+        whitedRuleConfigPO.setEnable(1);
         int insertResult = whitedRuleConfigMapper.insertSelective(whitedRuleConfigPO);
-        if(insertResult > 0 && dto.getEnable() == 1 && WhitedRuleTypeEnum.RULE_ENGINE.name().equals(dto.getRuleType()) && !StringUtils.isEmpty(dto.getRiskRuleCode())){
+        if (insertResult > 0 && dto.getEnable() == 1 && WhitedRuleTypeEnum.RULE_ENGINE.name().equals(dto.getRuleType()) && !StringUtils.isEmpty(dto.getRiskRuleCode())) {
             //触发风险扫描
             RulePO rulePO = ruleMapper.findOne(dto.getRiskRuleCode());
             executorService.execute(() -> {
                 scanService.scanByRule(rulePO.getId());
             });
         }
-        return insertResult;
+        return whitedRuleConfigPO.getId();
     }
 
     @Override
@@ -169,22 +171,25 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
                 dto.setCreator(user.getUserId());
             }
         }
-        UserInfoDTO currentUser = UserInfoContext.getCurrentUser();
-        Long tenantId = currentUser.getTenantId();
-        dto.setTenantId(tenantId);
-        int count = whitedRuleConfigMapper.count(dto);
-        if (count == 0) {
-            return listVO;
-        }
+
+        dto.setTenantId(UserInfoContext.getCurrentUser().getTenantId());
+
         List<WhitedRuleConfigPO> list = whitedRuleConfigMapper.list(dto);
-        List<WhitedRuleConfigVO> whitedRuleConfigVOS = new ArrayList<>();
-        if (!CollectionUtils.isEmpty(list)) {
-            whitedRuleConfigVOS = list.stream()
-                    .map(this::convertToVO)
-                    .collect(Collectors.toList());
+        if (StringUtils.isNoneEmpty(dto.getSearch())) {
+            list = list.stream()
+                    .filter(po -> po.getRuleConfig().contains(dto.getSearch()) || po.getRegoContent().contains(dto.getSearch()))
+                    .toList();
         }
-        listVO.setData(whitedRuleConfigVOS);
-        listVO.setTotal(count);
+
+        List<WhitedRuleConfigVO> result = list.stream()
+                .skip((long) (dto.getPage() - 1) * dto.getSize())
+                .limit(dto.getSize())
+                .map(this::convertToVO)
+                .toList();
+
+        listVO.setTotal(list.size());
+        listVO.setData(result);
+
         return listVO;
     }
 
@@ -195,7 +200,9 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
 
         UserRepository userRepository = SpringUtils.getApplicationContext().getBean(UserRepository.class);
         User user = userRepository.find(whitedRuleConfigPO.getCreator());
-        vo.setCreatorName(user.getUsername());
+        if (Objects.nonNull(user)) {
+            vo.setCreatorName(user.getUsername());
+        }
 
         boolean isLockHolder = false;
         if (currentUser.getUserId().equals(whitedRuleConfigPO.getLockHolder())) {
@@ -302,6 +309,7 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
         //获取当前租户下的风险数据
         QueryScanResultDTO queryScanResultDTO = new QueryScanResultDTO();
         queryScanResultDTO.setTenantId(UserInfoContext.getCurrentUser().getTenantId());
+        queryScanResultDTO.setStatusList(Arrays.asList(RiskStatusManager.RiskStatus.UNREPAIRED.name(), RiskStatusManager.RiskStatus.WHITED.name()));
         queryScanResultDTO.setLimit(100);
 
         String scrollId = null;
@@ -314,7 +322,7 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
             }
             queryScanResultDTO.setRuleId(rulePO.getId());
         }
-        List<RuleScanResultPO> listWithScrollId = new ArrayList<>();
+        List<RuleScanResultPO> listWithScrollId;
         while (true) {
             queryScanResultDTO.setScrollId(scrollId);
             listWithScrollId = ruleScanResultMapper.findListWithScrollId(queryScanResultDTO);
@@ -347,16 +355,14 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
             }
         }
 
-        TestRunWhitedRuleResultDTO resultDTO = TestRunWhitedRuleResultDTO.builder()
+        return TestRunWhitedRuleResultDTO.builder()
                 .count(count)
                 .ruleScanResultList(preWhitedList)
                 .build();
-
-        return resultDTO;
     }
 
     @Override
-    public SaveWhitedRuleRequestDTO queryWhitedContentByRisk(Long riskId) {
+    public SaveWhitedRuleRequest queryWhitedContentByRisk(Long riskId) {
         ApiResponse<RuleScanResultVO> ruleScanResultVOApiResponse = riskService.queryRiskDetail(riskId);
         if (!StringUtils.isEmpty(ruleScanResultVOApiResponse.getErrorCode()) || Objects.isNull(ruleScanResultVOApiResponse.getContent())) {
             log.error("query RuleScanResultVO not exist,riskId:{} ", riskId);
@@ -365,17 +371,44 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
         return buildContentByRiskInfo(ruleScanResultVOApiResponse.getContent());
     }
 
-    private SaveWhitedRuleRequestDTO buildContentByRiskInfo(RuleScanResultVO ruleScanResultVO){
+    @Override
+    public ListVO<GroupByRuleCodeVO> getListGroupByRuleCode(QueryWhitedRuleDTO dto) {
+        ListVO<GroupByRuleCodeVO> listVO = new ListVO<>();
+
+        // Tenant isolation
+        dto.setTenantId(UserInfoContext.getCurrentUser().getTenantId());
+        List<GroupByRuleCodeDTO> list = whitedRuleConfigMapper.findListGroupByRuleCode(dto);
+
+        if (CollectionUtils.isEmpty(dto.getRuleCodeList())) {
+            GroupByRuleCodeDTO groupByRuleCodeDTO = whitedRuleConfigMapper.findNullRuleCode(dto);
+            if (Objects.nonNull(groupByRuleCodeDTO)) {
+                list.add(0, groupByRuleCodeDTO);
+            }
+        }
+
+        List<GroupByRuleCodeVO> result = list.stream()
+                .skip((long) (dto.getPage() - 1) * dto.getSize())
+                .limit(dto.getSize())
+                .map(GroupByRuleCodeVO::build)
+                .toList();
+
+        listVO.setTotal(list.size());
+        listVO.setData(result);
+
+        return listVO;
+    }
+
+    private SaveWhitedRuleRequest buildContentByRiskInfo(RuleScanResultVO ruleScanResultVO) {
         RuleVO ruleVO = ruleScanResultVO.getRuleVO();
-        SaveWhitedRuleRequestDTO saveWhitedRuleRequestDTO = new SaveWhitedRuleRequestDTO();
-        saveWhitedRuleRequestDTO.setRuleName(ruleVO.getRuleName() + "_手动加白");
-        saveWhitedRuleRequestDTO.setRuleDesc(ruleVO.getRuleName() + "_手动加白");
-        saveWhitedRuleRequestDTO.setRuleType(WhitedRuleTypeEnum.RULE_ENGINE.name());
-        saveWhitedRuleRequestDTO.setRiskRuleCode(ruleScanResultVO.getRuleCode());
+        SaveWhitedRuleRequest saveWhitedRuleRequest = new SaveWhitedRuleRequest();
+        saveWhitedRuleRequest.setRuleName(ruleVO.getRuleName() + "_手动加白");
+        saveWhitedRuleRequest.setRuleDesc(ruleVO.getRuleName() + "_手动加白");
+        saveWhitedRuleRequest.setRuleType(WhitedRuleTypeEnum.RULE_ENGINE.name());
+        saveWhitedRuleRequest.setRiskRuleCode(ruleScanResultVO.getRuleCode());
 
         List<WhitedRuleConfigDTO> ruleConfigList = new ArrayList<>();
         int index = 1;
-        if (!StringUtils.isEmpty(ruleScanResultVO.getResourceId())){
+        if (!StringUtils.isEmpty(ruleScanResultVO.getResourceId())) {
             WhitedRuleConfigDTO resourceIdRuleConfigDTO = WhitedRuleConfigDTO.builder()
                     .id(index)
                     .key("resourceId")
@@ -385,7 +418,7 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
             index++;
             ruleConfigList.add(resourceIdRuleConfigDTO);
         }
-        if (!StringUtils.isEmpty(ruleScanResultVO.getCloudAccountId())){
+        if (!StringUtils.isEmpty(ruleScanResultVO.getCloudAccountId())) {
             WhitedRuleConfigDTO resourceTypeRuleConfigDTO = WhitedRuleConfigDTO.builder()
                     .id(index)
                     .key("resourceType")
@@ -395,7 +428,7 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
             index++;
             ruleConfigList.add(resourceTypeRuleConfigDTO);
         }
-        if (!StringUtils.isEmpty(ruleScanResultVO.getCloudAccountId())){
+        if (!StringUtils.isEmpty(ruleScanResultVO.getCloudAccountId())) {
             WhitedRuleConfigDTO cloudAccountIdRuleConfigDTO = WhitedRuleConfigDTO.builder()
                     .id(index)
                     .key("cloudAccountId")
@@ -411,42 +444,42 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
                 condition.append("&&");
             }
         }
-        saveWhitedRuleRequestDTO.setCondition(condition.toString());
-        saveWhitedRuleRequestDTO.setRuleConfigList(ruleConfigList);
-        return saveWhitedRuleRequestDTO;
+        saveWhitedRuleRequest.setCondition(condition.toString());
+        saveWhitedRuleRequest.setRuleConfigList(ruleConfigList);
+        return saveWhitedRuleRequest;
     }
 
-    private TestRunWhitedRuleResultDTO runRegoWithInput(TestRunWhitedRuleRequestDTO dto) {
-        //rego模式下且选择了风险规则
-        if (dto.getRuleType().equals(WhitedRuleTypeEnum.REGO.name()) && !StringUtils.isEmpty(dto.getRiskRuleCode())) {
-
-            RuleScanResultDTO ruleScanResultDTO = RuleScanResultDTO.builder()
-                    .status(RiskStatusManager.RiskStatus.UNREPAIRED.name())
-                    .ruleCodeList(Collections.singletonList(dto.getRiskRuleCode()))
-                    .build();
-
-            List<RuleScanResultPO> ruleScanResultList = ruleScanResultMapper.findList(ruleScanResultDTO);
-            RuleScanResultPO ruleScanResultPO = null;
-            if (!CollectionUtils.isEmpty(ruleScanResultList)) {
-                ruleScanResultPO = ruleScanResultList.get(0);
-            }
-            WhitedScanInputDataDTO whitedExampleDataResultDTO = JSON.parseObject(dto.getInput(), WhitedScanInputDataDTO.class);
-
-            // 无示例数据的情况
-            if (!areAllFieldsNull(whitedExampleDataResultDTO)) {
-                boolean scanResult = executeRegoScan(dto, whitedExampleDataResultDTO);
-                if (scanResult) {
-                    return TestRunWhitedRuleResultDTO.builder()
-                            .count(1)
-                            .ruleScanResultList(Collections.singletonList(ruleScanResultPO))
-                            .build();
-                }
-            }
-        }
-        return TestRunWhitedRuleResultDTO.builder()
-                .count(0)
-                .build();
-    }
+//    private TestRunWhitedRuleResultDTO runRegoWithInput(TestRunWhitedRuleRequestDTO dto) {
+//        //rego模式下且选择了风险规则
+//        if (dto.getRuleType().equals(WhitedRuleTypeEnum.REGO.name()) && !StringUtils.isEmpty(dto.getRiskRuleCode())) {
+//
+//            RuleScanResultDTO ruleScanResultDTO = RuleScanResultDTO.builder()
+//                    .status(RiskStatusManager.RiskStatus.UNREPAIRED.name())
+//                    .ruleCodeList(Collections.singletonList(dto.getRiskRuleCode()))
+//                    .build();
+//
+//            List<RuleScanResultPO> ruleScanResultList = ruleScanResultMapper.findList(ruleScanResultDTO);
+//            RuleScanResultPO ruleScanResultPO = null;
+//            if (!CollectionUtils.isEmpty(ruleScanResultList)) {
+//                ruleScanResultPO = ruleScanResultList.get(0);
+//            }
+//            WhitedScanInputDataDTO whitedExampleDataResultDTO = JSON.parseObject(dto.getInput(), WhitedScanInputDataDTO.class);
+//
+//            // 无示例数据的情况
+//            if (!areAllFieldsNull(whitedExampleDataResultDTO)) {
+//                boolean scanResult = executeRegoScan(dto, whitedExampleDataResultDTO);
+//                if (scanResult) {
+//                    return TestRunWhitedRuleResultDTO.builder()
+//                            .count(1)
+//                            .ruleScanResultList(Collections.singletonList(ruleScanResultPO))
+//                            .build();
+//                }
+//            }
+//        }
+//        return TestRunWhitedRuleResultDTO.builder()
+//                .count(0)
+//                .build();
+//    }
 
     private void testRunParamCheck(TestRunWhitedRuleRequestDTO dto) {
         if (WhitedRuleTypeEnum.REGO.name().equals(dto.getRuleType()) && StringUtils.isEmpty(dto.getRegoContent())) {
@@ -456,16 +489,16 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
             throw new RuntimeException("规则类型不存在,请检查!");
         }
         if (WhitedRuleTypeEnum.RULE_ENGINE.name().equals(dto.getRuleType())) {
-            if (!StringUtils.isEmpty(dto.getRuleConfigList()) && dto.getRuleConfigList().size() == 1 && StringUtils.isEmpty(dto.getCondition())) {
+            if (!CollectionUtils.isEmpty(dto.getRuleConfigList()) && dto.getRuleConfigList().size() == 1 && StringUtils.isEmpty(dto.getCondition())) {
                 dto.setCondition("1");
             }
-            if (!StringUtils.isEmpty(dto.getRuleConfigList()) && dto.getRuleConfigList().size() > 1 && StringUtils.isEmpty(dto.getCondition())) {
+            if (!CollectionUtils.isEmpty(dto.getRuleConfigList()) && dto.getRuleConfigList().size() > 1 && StringUtils.isEmpty(dto.getCondition())) {
                 throw new RuntimeException("存在多个条件配置规则,请设置其逻辑关系!");
             }
         }
     }
 
-    private void paramCheck(SaveWhitedRuleRequestDTO dto, UserInfoDTO userInfo) {
+    private void paramCheck(SaveWhitedRuleRequest dto, UserInfoDTO userInfo) {
         if (Objects.isNull(userInfo)) {
             throw new RuntimeException("用户信息为空,请检查!");
         }
@@ -476,10 +509,10 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
             throw new RuntimeException("REGO规则内容为空,请检查!");
         }
         if (WhitedRuleTypeEnum.RULE_ENGINE.name().equals(dto.getRuleType())) {
-            if (!StringUtils.isEmpty(dto.getRuleConfigList()) && dto.getRuleConfigList().size() > 1 && StringUtils.isEmpty(dto.getCondition())) {
+            if (!CollectionUtils.isEmpty(dto.getRuleConfigList()) && dto.getRuleConfigList().size() > 1 && StringUtils.isEmpty(dto.getCondition())) {
                 throw new RuntimeException("存在多个条件配置规则,请设置其逻辑关系!");
             }
-            if (!StringUtils.isEmpty(dto.getRuleConfigList()) && dto.getRuleConfigList().size() == 1 && StringUtils.isEmpty(dto.getCondition())) {
+            if (!CollectionUtils.isEmpty(dto.getRuleConfigList()) && dto.getRuleConfigList().size() == 1 && StringUtils.isEmpty(dto.getCondition())) {
                 dto.setCondition("1");
             }
         }
@@ -497,7 +530,7 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
         }
     }
 
-    private WhitedRuleConfigPO buildWhitedRuleConfigPO(WhitedRuleConfigPO whitedRuleConfigPO, SaveWhitedRuleRequestDTO dto, UserInfoDTO userInfo, String ruleConfigJson) {
+    private WhitedRuleConfigPO buildWhitedRuleConfigPO(WhitedRuleConfigPO whitedRuleConfigPO, SaveWhitedRuleRequest dto, UserInfoDTO userInfo, String ruleConfigJson) {
         whitedRuleConfigPO.setRuleName(dto.getRuleName());
         whitedRuleConfigPO.setRuleDesc(dto.getRuleDesc());
         whitedRuleConfigPO.setRuleType(dto.getRuleType());
@@ -505,7 +538,7 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
         whitedRuleConfigPO.setRuleConfigJson(ruleConfigJson);
         whitedRuleConfigPO.setCondition(dto.getCondition());
         whitedRuleConfigPO.setRegoContent(dto.getRegoContent());
-        if (Objects.isNull(whitedRuleConfigPO.getId())){
+        if (Objects.isNull(whitedRuleConfigPO.getId())) {
             whitedRuleConfigPO.setCreator(userInfo.getUserId());
         }
         whitedRuleConfigPO.setLockHolder(userInfo.getUserId());
@@ -535,39 +568,39 @@ public class WhitedRuleServiceImpl implements WhitedRuleService {
         return whitedRegoMatcher.executeRegoMatch(dto.getRegoContent(), null, ruleScanResultPO, cloudAccountPO, null);
     }
 
-    /**
-     * REGO规则引擎扫描器执行-
-     *
-     * @param dto
-     * @param whitedScanInputDataDTO
-     * @return
-     */
-    private boolean executeRegoScan(TestRunWhitedRuleRequestDTO dto, WhitedScanInputDataDTO whitedScanInputDataDTO) {
-        return whitedRegoMatcher.executeRegoMatch(dto.getRegoContent(),null, whitedScanInputDataDTO);
-    }
+//    /**
+//     * REGO规则引擎扫描器执行-
+//     *
+//     * @param dto
+//     * @param whitedScanInputDataDTO
+//     * @return
+//     */
+//    private boolean executeRegoScan(TestRunWhitedRuleRequestDTO dto, WhitedScanInputDataDTO whitedScanInputDataDTO) {
+//        return whitedRegoMatcher.executeRegoMatch(dto.getRegoContent(), null, whitedScanInputDataDTO);
+//    }
 
 
-    public static boolean areAllFieldsNull(WhitedScanInputDataDTO whitedScanInputDataDTO) {
-        if (whitedScanInputDataDTO == null) {
-            return true;
-        }
-        // 遍历所有字段
-        for (Field field : whitedScanInputDataDTO.getClass().getDeclaredFields()) {
-            field.setAccessible(true);
-            try {
-                Object value = field.get(whitedScanInputDataDTO);
-                if (value != null) {
-                    if (value instanceof String && !((String) value).trim().isEmpty()) {
-                        return false;
-                    } else if (!(value instanceof String)) {
-                        return false;
-                    }
-                }
-            } catch (IllegalAccessException e) {
-                log.error("areAllFieldsNull error", e);
-            }
-        }
-
-        return true;
-    }
+//    public static boolean areAllFieldsNull(WhitedScanInputDataDTO whitedScanInputDataDTO) {
+//        if (whitedScanInputDataDTO == null) {
+//            return true;
+//        }
+//        // 遍历所有字段
+//        for (Field field : whitedScanInputDataDTO.getClass().getDeclaredFields()) {
+//            field.setAccessible(true);
+//            try {
+//                Object value = field.get(whitedScanInputDataDTO);
+//                if (value != null) {
+//                    if (value instanceof String && !((String) value).trim().isEmpty()) {
+//                        return false;
+//                    } else if (!(value instanceof String)) {
+//                        return false;
+//                    }
+//                }
+//            } catch (IllegalAccessException e) {
+//                log.error("areAllFieldsNull error", e);
+//            }
+//        }
+//
+//        return true;
+//    }
 }
